# kwimage_ext

./: .gitlab-ci.yml  .readthedocs.yml  .rules.yml  CHANGELOG.md  CMakeLists.txt  README.rst  build_wheels.sh  pyproject.toml  run_doctests.sh  run_tests.py  setup.py
CMake/: kwimage_ext-setup-python.cmake
dev/: ci_public_gpg_key.pgp.enc  ci_secret_gpg_subkeys.pgp.enc  gpg_owner_trust.enc  setup_secrets.sh
docs/source/: conf.py
kwimage_ext/: __init__.py
kwimage_ext/algo/: algo_nms.py
kwimage_ext/algo/_nms_backend/: gpu_nms.pyx
requirements/: build.txt  optional.txt  runtime.txt  tests.txt
