[build-system]
# Build with an old numpy for forwards compat
# reason: https://stackoverflow.com/questions/66060487/valueerror-numpy-ndarray-size-changed-may-indicate-binary-incompatibility-exp
requires = [
"setuptools>=41.0.1", "wheel", "scikit-build>=0.9.0", 
"numpy==1.21.2 ; python_version >= '3.6'", 
"numpy==1.19.2 ; python_version < '3.10' and python_version >= '3.6'", 
"ninja>=1.10.0", "cmake>=3.13.3", "cython", "cffi"
]

[tool.xcookie]
tags = [ "kitware", "gitlab", "binpy",]
mod_name = "kwimage_ext"
repo_name = "kwimage_ext"

[tool.cibuildwheel]
build = "cp37-* cp38-* cp39-* cp310-*"
#build-frontend = "build"
skip = "pp* cp27-* cp34-* cp35-* *-musllinux_*"
# We need numpy i686 wheels to use auto
#archs = ["auto"]
archs = ["x86_64"]
build-verbosity = 1
container-engine = "podman"
# test-requires = [ "-r requirements/tests.txt",]
# test-command = "python {project}/run_tests.py"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "kwimage_ext/__main__.py", "*/setup.py",]
