[build-system]
# Build with an old numpy for forwards compat
# reason: https://stackoverflow.com/questions/66060487/valueerror-numpy-ndarray-size-changed-may-indicate-binary-incompatibility-exp
requires = [
"setuptools>=41.0.1",
"wheel",
"scikit-build>=0.9.0", 
"numpy>=2.1.0  ; python_version < '4.0'  and python_version >= '3.13'",    # Python 3.13+
"numpy>=1.26.0 ; python_version < '3.13' and python_version >= '3.12'",    # Python 3.12
"numpy>=1.23.2 ; python_version < '3.12' and python_version >= '3.11'",    # Python 3.11
"numpy>=1.21.6 ; python_version < '3.11' and python_version >= '3.10'",
"numpy>=1.19.3 ; python_version < '3.10' and python_version >= '3.9'", 
"ninja>=1.10.0",
"cmake>=3.15.0",
"cython",
"cffi"
]

#requires = ["maturin>=1.7,<2.0"]
#build-backend = "maturin"

[tool.xcookie]
tags = [ "kitware", "gitlab", "binpy", 'nosrcdist']
author = "Kitware Inc., Jon Crall"
os = [ "all", "win", "osx", "linux",]
rel_mod_parent_dpath = "."
#author_email = 'kitware@kitware.com, jon.crall@kitware.com'
author_email = 'jon.crall@kitware.com'
mod_name = "kwimage_ext"
repo_name = "kwimage_ext"
dev_status = "alpha"
min_python = "3.10"
url = 'https://gitlab.kitware.com/computer-vision/kwimage_ext'

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
#build-frontend = "build"
skip = "pp* *-musllinux_*"
# We need numpy i686 wheels to use auto
archs = ["auto"]
#archs = ["x86_64"]
#archs = ["i686"]
build-verbosity = 1
container-engine = "podman"

manylinux-x86_64-image = "manylinux2014"

# test-requires = [ "-r requirements/tests.txt",]
# test-command = "python {project}/run_tests.py"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "kwimage_ext/__main__.py", "*/setup.py",]

#[tool.maturin]
#features = ["pyo3/extension-module"]

[tool.cibuildwheel.linux]
before-all = "yum install -y libffi-devel"
